# NeuroCraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format
devops/: config.bat  format_all_files.bat  install_git_hooks.bat
devops/docs/: Doxyfile  generate_docs.bat
devops/githooks/: pre-commit
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: m_frag.glsl  m_vertex.glsl  testFrag.glsl
src/: app.cpp  app.hpp  constants.hpp  logger.cpp  logger.hpp  main.cpp  utils.hpp
src/camera/: camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp
src/events/: event.hpp  event_handler.hpp  method_event_handler.hpp  mouse_event_handler.hpp
src/graphics/: frame_buffer.cpp  frame_buffer.hpp  mesh.cpp  mesh.hpp  render_commands.cpp  render_commands.hpp  shader.cpp  shader.hpp
src/logger/: logger.cpp  logger.hpp
src/managers/: render_manager.cpp  render_manager.hpp
src/ui/: camera.cpp  camera.hpp  main_window.cpp  main_window.hpp
